Fix style inconsistencies in review request change descriptions.
There were major two inconsistencies between the Markdown-capable review
request fields and the change description rendering.

Visited links in the fields would appear with the standard purple color
(or whatever is used by the browser). Non-visited links would appear in
the standard blue (or, again, whatever is used by the browser). However,
change description text would force blue. Now we use the default color
for the browser, including the default visited link color.

Code blocks also appeared too big in the change description text. We now
set it to use the same font size as the parent rich-text div.

Reviewed at https://reviews.reviewboard.org/r/6654/

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -809,7 +809,7 @@
     }
 
     a {
-      color: blue;
+      color: default;
       text-decoration: none;
 
       &:hover {
@@ -2159,6 +2159,7 @@
 
   pre {
     .pre-wrap;
+    font-size: inherit;
     margin-left: 2.5em;
 
     * {
